--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.6.11",
-    "vuex": "3.0.1",
-    "jquery": "^3.0.0",
-    "vue2-editor": "2.6.6",
-    "vue-mq": "0.2.1",
-    "highlightjs": "9.10.0",
-    "liquor-tree": "0.2.32",
-    "font-awesome": "4.7.0",
+    "axios": "^0.19.1",
     "bootstrap-vue": "^2.2.2",
     "bootstrap": "^4.4.1",
-    "axios": "^0.19.1"
+    "font-awesome": "^4.7.0",
+    "highlight.js": "^9.16.1",
+    "jquery": "^3.4.1",
+    "liquor-tree": "0.2.7",
+    "vue": "^2.6.11",
+    "vuex": "^3.1.3",
+    "vue2-editor": "2.6.6",
+    "vue-gravatar": "1.3.1",
+    "vue-mq": "^1.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.2",
