--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vuex": "^3.1.3",
     "vue2-editor": "2.6.6",
     "vue-gravatar": "1.3.1",
+    "vue-router": "^3.1.0",
     "vue-mq": "^1.0.1"
   },
   "devDependencies": {
